@@ -172,7 +172,15 @@ empathy_contact_information_dialog_show (EmpathyContact *contact,
 	dialog = gtk_dialog_new ();
 	gtk_dialog_set_has_separator (GTK_DIALOG (dialog), FALSE);
 	gtk_window_set_resizable (GTK_WINDOW (dialog), FALSE);
-	gtk_window_set_title (GTK_WINDOW (dialog), _("Contact information"));
+	if (is_user) {
+		gtk_window_set_title (GTK_WINDOW (dialog), _("Personal Information"));
+	}
+	else if (edit) {
+		gtk_window_set_title (GTK_WINDOW (dialog), _("Edit Contact Information"));
+	}
+	else {
+		gtk_window_set_title (GTK_WINDOW (dialog), _("Contact Information"));
+	}
 
 	/* Close button */
 	button = gtk_button_new_with_label (GTK_STOCK_CLOSE);
@@ -290,7 +298,7 @@ empathy_new_contact_dialog_show (GtkWindow *parent)
 	dialog = gtk_dialog_new ();
 	gtk_dialog_set_has_separator (GTK_DIALOG (dialog), FALSE);
 	gtk_window_set_resizable (GTK_WINDOW (dialog), FALSE);
-	gtk_window_set_title (GTK_WINDOW (dialog), _("New contact"));
+	gtk_window_set_title (GTK_WINDOW (dialog), _("New Contact"));
 
 	/* Cancel button */
 	button = gtk_button_new_with_label (GTK_STOCK_CANCEL);
