@@ -1,3 +1,11 @@
+2007-10-28  Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy-gtk/empathy-contact-dialogs.c: Change edit personal
+	information window title to "Personal Information". Fixes bug #490159.
+	Change add contact window title to "New Contact", need a capitalized
+	'C'. Change edit contact information window title to
+	"Edit Contact Information".
+
 2007-10-25  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy-gtk/empathy-chat.glade: Add Ctr-L accelerator to clear
